[gd_scene load_steps=10 format=3 uid="uid://buau22kpipeik"]

[ext_resource type="Script" path="res://Level/Level_01.gd" id="1_d672e"]
[ext_resource type="PackedScene" uid="uid://bngycxbop837e" path="res://Tree/Tree_0.tscn" id="1_wte0w"]
[ext_resource type="PackedScene" uid="uid://q4sq4wexty38" path="res://Baddies/baddie_path.tscn" id="3_ajk0h"]
[ext_resource type="Theme" uid="uid://d2qr614qvy4k3" path="res://Themes/HealthBarComponent.tres" id="5_0rqms"]
[ext_resource type="Script" path="res://Level/Wave_controller.gd" id="5_w5qvq"]
[ext_resource type="Script" path="res://Level/Resource_Monitor.gd" id="6_q47pa"]
[ext_resource type="Texture2D" uid="uid://c8olrxiag515c" path="res://Assets/Icons/Clorophyll_Icon.png" id="7_j2wpk"]
[ext_resource type="Texture2D" uid="uid://cg28wsjyhy8ys" path="res://Assets/Icons/Nutrient_Icon.png" id="8_pacrh"]
[ext_resource type="PackedScene" uid="uid://c56mst6okono4" path="res://Components/UIComponents/stat_button.tscn" id="9_xujya"]

[node name="Level_01" type="Node2D"]
script = ExtResource("1_d672e")

[node name="Ground" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.721569, 0.831373, 0.176471, 1)

[node name="Tree_0" parent="." instance=ExtResource("1_wte0w")]

[node name="Wave_controller" type="Node2D" parent="."]
script = ExtResource("5_w5qvq")

[node name="Baddie_Path" parent="Wave_controller" instance=ExtResource("3_ajk0h")]

[node name="Baddie_Timer" type="Timer" parent="Wave_controller"]
wait_time = 0.75

[node name="Save_Timer" type="Timer" parent="."]
wait_time = 3.917
autostart = true

[node name="Resource_Monitor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 445.0
offset_bottom = 16.0
theme = ExtResource("5_0rqms")
script = ExtResource("6_q47pa")

[node name="Chlorophyll" type="Panel" parent="Resource_Monitor"]
layout_mode = 0
offset_right = 63.0
offset_bottom = 16.0

[node name="Icon" type="TextureRect" parent="Resource_Monitor/Chlorophyll"]
texture_filter = 1
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("7_j2wpk")
stretch_mode = 4

[node name="Amount" type="Label" parent="Resource_Monitor/Chlorophyll"]
layout_mode = 0
offset_left = 20.4154
offset_top = 1.05183
offset_right = 74.4154
offset_bottom = 19.0518
text = "00/00"
vertical_alignment = 3

[node name="Nutrients" type="Panel" parent="Resource_Monitor"]
layout_mode = 0
offset_left = 76.8552
offset_top = 0.314987
offset_right = 139.855
offset_bottom = 16.315

[node name="Icon" type="TextureRect" parent="Resource_Monitor/Nutrients"]
texture_filter = 1
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("8_pacrh")
stretch_mode = 4

[node name="Amount" type="Label" parent="Resource_Monitor/Nutrients"]
layout_mode = 0
offset_left = 20.1004
offset_top = 1.05183
offset_right = 74.1004
offset_bottom = 19.0518
text = "00/00"
vertical_alignment = 3

[node name="Resource_Update_Timer" type="Timer" parent="Resource_Monitor"]
autostart = true

[node name="AutoProgress" type="CheckButton" parent="."]
offset_left = 1083.96
offset_top = 14.5198
offset_right = 1260.96
offset_bottom = 43.5198
theme = ExtResource("5_0rqms")
text = "Auto Progress"

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 1019.0
offset_top = 59.0
offset_right = 1275.0
offset_bottom = 276.0

[node name="thing" parent="GridContainer" instance=ExtResource("9_xujya")]
layout_mode = 2

[node name="Stat" parent="GridContainer/thing" index="2"]
text = "Damage"

[connection signal="timeout" from="Wave_controller/Baddie_Timer" to="Wave_controller" method="_on_baddie_timer_timeout"]
[connection signal="timeout" from="Save_Timer" to="." method="_on_save_timer_timeout"]
[connection signal="timeout" from="Resource_Monitor/Resource_Update_Timer" to="Resource_Monitor" method="_on_resource_update_timer_timeout"]
[connection signal="toggled" from="AutoProgress" to="Wave_controller" method="_on_auto_progress_toggled"]

[editable path="GridContainer/thing"]
